# env_notes

./: .gitignore  README.md  main.py  pyproject.toml
env_notes/: __init__.py  __main__.py  app.py  storage.py
scripts/: install-launchd-agent.sh  install-notes-test-apache.sh
static/: app.js  index.html  styles.css
